<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="35dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bmi_height"
                android:inputType="text"
                android:drawableLeft="@drawable/ico_height"
                />
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bmi_width"
                android:drawableLeft="@drawable/ico_weight"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:text="@string/bmi_button_calculate"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>