<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="35dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ico_person"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="99dp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ico_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="281dp" />

            <EditText
                android:id="@+id/register_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ico_lock"
                android:ems="10"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="281dp" />


            <Button
                android:id="@+id/register_register_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/background_light"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="342dp" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>